force-app/main/default/objects/Credential_Request__c/Credential_Request__c.object-meta.xml
<CustomObject>
    <description>Staging object for volunteer credential submissions awaiting admin review. The Intake Flow creates one of these records per submission, storing the volunteer-entered data here rather than writing it directly to Credential__c. An admin reviews and either approves or rejects. On approval the Credential_Request_Approval flow copies the verified field values to the linked Credential__c. Files stay on this record permanently for audit purposes. OWD is ReadWrite so internal users can review and update all requests. Guest users access exclusively via the System Mode Intake Flow and are not subject to OWD.</description>
    <label>Credential Request</label>
    <nameField>
        <displayFormat>CRQ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credential Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>