force-app/main/default/objects/Credential_Request__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Credential record this request belongs to. Populated by the Intake Flow at creation time. Used by the Credential_Request_Approval flow to locate the target record when copying approved field values.</description>
    <label>Credential</label>
    <referenceTo>Credential__c</referenceTo>
    <relationshipLabel>Credential Requests</relationshipLabel>
    <relationshipName>Credential_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>