force-app/main/default/objects/Credential_Request__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <description>The issuing authority name entered by the volunteer on the intake form. Held here in the staging record until an admin approves, at which point it is copied to Credential__c.Issued_By__c by the approval flow.</description>
    <label>Issued By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>