force-app/main/default/objects/Credential_Request__c/fields/Submission_Link__c.field-meta.xml
<CustomField>
    <fullName>Submission_Link__c</fullName>
    <description>The public URL for this specific submission request, assembled from Unique_Token__c. Displayed in the Highlights Panel so admins can copy and send it to the volunteer. Each Credential_Request__c has its own unique link - setting the Credential Status to Requested again creates a new request with a fresh token and a new link.</description>
    <formula>&quot;https://sl1771816777101.my.site.com/s/submit?id=&quot; &amp; Unique_Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Link</label>
    <type>Text</type>
</CustomField>