force-app/main/default/objects/Credential_Request__c/fields/Unique_Token__c.field-meta.xml
<CustomField>
    <fullName>Unique_Token__c</fullName>
    <description>A GUID generated by the Credential_Request_Creation record-triggered flow when a Credential__c is set to Requested status. This token is the sole identifier embedded in the Submission_Link__c URL - the Salesforce record ID is never exposed. Each Credential_Request__c has its own unique, non-guessable token. Must never appear on page layouts or list views visible to external users. See docs/decisions/use-guid-token-for-access-control.md.</description>
    <label>Unique Token</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>